--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="Theme.ObsoleteDataDeleteExample" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.ObsoleteDataDeleteExample.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/pur</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.ObsoleteDataDeleteExample</item>
+    </style>
 </resources>
