--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.ObsoleteDataDeleteExample" parent="android:Theme.Material.Light.NoActionBar" />
 
     <style name="Theme.ObsoleteDataDeleteExample.Starting" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/pur</item>
+        <item name="windowSplashScreenBackground">@color/purple_500</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
         <item name="postSplashScreenTheme">@style/Theme.ObsoleteDataDeleteExample</item>
     </style>
